# UBB

sem1/AP/test_315/: main.py
sem1/AP/venus22/: avioane.txt  main.py  teste.py
sem2/OOP/Examen_Practic/: Bacterie.cpp  Bacterie.h  CMakeLists.txt  Repository.cpp  Repository.h  Service.cpp  Service.h  UI.cpp  UI.h  main.cpp  tests.cpp  tests.h  utils.h
sem2/OOP/Laborator3/: CMakeLists.txt  citaf.cpp  citaf.h  main.cpp  rezolvare.cpp  rezolvare.h  tests.cpp  tests.h
sem2/OOP/Laborator4/: CMakeLists.txt  main.cpp  operations.cpp  operations.h  patrat.cpp  patrat.h  repository.cpp  repository.h  tests.cpp  tests.h
sem2/OOP/OOP_lab11-12/: CMakeLists.txt  FileRepository.cpp  FileRepository.h  Produse.cpp  Produse.h  Repo_tonomat.cpp  Repo_tonomat.h  Service.cpp  Service.h  UI.cpp  UI.h  main.cpp  teste.cpp  teste.h
sem2/OOP/OOP_lab11-12/utils/: FileException.cpp  FileException.h  MyException.h  MyValidator.cpp  MyValidator.h  PurchesException.cpp  PurchesException.h  ValidatorError.cpp  ValidatorError.h
sem2/OOP/laborator2/: CMakeLists.txt  main.cpp  probl.cpp  probl.h  rezolv56.cpp  rezolv56.h  tests.cpp  tests.h
sem2/SD/CLionProjectsLABORATORsd3/: CMakeLists.txt  atm.cpp  atm.h  colectie.cpp  colectie.h  main.cpp  menu.cpp  menu.h  tranzactie.cpp  tranzactie.h  vectordinamic.cpp  vectordinamic.h
sem2/SD/lab1Structuri/: date.txt  functii.py  main.py  masina.py
sem2/SD/lab_4-5_SD_v1/: ATM.cpp  ATM.h  CMakeLists.txt  Colectie.cpp  Colectie.h  List.h  Node.h  TestList.cpp  TestList.h  Tranzactie.cpp  Tranzactie.h  colectie.txt  main.cpp
(+125 files in other folders)
